# ratings_method

./: pyproject.toml
1_metod/: SerieB22-23  main.py
2_metod/: 22-23.json  23.csv  dist_ratings.py  interpol.py  plot.py  sum_rating.py  sum_test.py  test.py
2_metod/data/: 19b.csv
2_metod/results/: 14.json  14b.json  15.json  16.json  17.json  17b.json  18.json  19.json  20.json  21.json  21b.json  22b.json  coefficients.json  sum.json
2_metod/tests/: sum.json  sumd.json  test_15b.json  test_15d.json  test_16.json  test_16d.json  test_17.json  test_17b.json  test_17d.json  test_18.json  test_18d.json  test_19.json  test_19d.json  test_20d.json  test_21d.json  test_22d.json  test_23d.json
poisson_method/1_metod/: SerieB21-22
ratings/2_metod/: dist_ratings.py  interpol.py  linearize.py  plot.py  sum_test.py  test.py  testA.py  testH.py
ratings/2_metod/final_test/: final1.json  test_14a.json  test_14b.json  test_15a.json  test_15b.json  test_16a.json  test_16b.json  test_17a.json  test_17b.json  test_18a.json  test_18b.json  test_19a.json  test_19b.json  test_20a.json  test_20b.json  test_21a.json  test_21b.json  test_22a.json  test_22b.json  test_23a.json  test_23b.json
ratings/2_metod/results/: 14.json  14b.json  15.json  15b.json  16.json  16b.json  17.json  17b.json  18.json  18b.json  19.json  19b.json  20.json  20b.json  21.json  21b.json  22.json  22b.json  23.json  23b.json  coefficients.json  sum.json
ratings/2_metod/tests/: sum.json  sumb.json  sumc.json  sume.json  sumf.json  sumg.json  sumh.json  sumi.json  test_14.json  test_14b.json  (+60 more)
