[tool.poetry]
name = "serieb"
version = "0.1.0"
description = ""
authors = ["ghiannir <ghiannir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.2"
scipy = "^1.9.3"
pickle4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
